# fault_scarp_code

./: Instructions for Scarp_Offset_v4g.docx  LICENSE  README.md  Scarp_offset_v4g.m  pyproject.toml  slopeangle_f.m
scarp_offset/: __init__.py  __main__.py  core.py  interactive.py  io.py
