[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scarp-offset"
version = "1.0.0"
description = "Interactive fault scarp vertical offset measurement from topographic profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Chris DuRoss (original MATLAB)", email = "cduross@usgs.gov" },
]
keywords = [
    "fault scarp",
    "vertical offset",
    "topographic profile",
    "paleoseismology",
    "geomorphology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
scarp-offset = "scarp_offset.__main__:main"

[tool.setuptools.packages.find]
include = ["scarp_offset*"]
